DFHack Future
    Internals
        Lua scripts can set environment variables of each other with dfhack.run_script_with_env.
        eventful Lua reactions no longer require LUA_HOOK as a prefix: you can register a callback for the completion of any reaction with a name
        Filesystem module now provides file access/modification times and can list directories (normally and recursively)
        Units Module: New functions:
            isWar
            isHunter
            isAvailableForAdoption
            isOwnCiv
            isOwnRace
            getRaceName
            getRaceNamePlural
            getRaceBabyName
            getRaceChildName
            isBaby
            isChild
            isAdult
            isEggLayer
            isGrazer
            isMilkable
            isTrainableWar
            isTrainableHunting
            isTamable
            isMale
            isFemale
            isMerchant
            isForest
            isMarkedForSlaughter
        Buildings Module: New Functions:
            isActivityZone
            isPenPasture
            isPitPond
            isActive
            findPenPitAt
    Fixes
        dfhack.run_script should correctly find save-specific scripts now.
        Updated add-thought to properly affect stress.
        hfs-pit should work now
        Autobutcher takes gelding into account
        init.lua existence checks should be more reliable (notably when using non-English locales)
    New Plugins
    New Scripts
    New Tweaks
    Removed
    Misc Improvements
        Multiline commands are now possible inside dfhack.init scripts. See dfhack.init-example for example usage.

DFHack 0.40.24-r1
    Internals
        CMake shouldn't cache DFHACK_RELEASE anymore. People may need to manually update/delete their CMake cache files to get rid of it.

DFHack 0.40.24-r0
    Internals
        EventManager: fixed crash error with EQUIPMENT_CHANGE event.
        key modifier state exposed to Lua
    Fixes